--- a/src/assets/scss/components/_Book.scss
+++ b/src/assets/scss/components/_Book.scss
@@ -1,25 +1,24 @@
 .Book {
   width: 200px;
-  margin: 20px;
+  margin: 15px;
   display: inline-block;
   position: relative;
 
   &_image {
     width: 100%;
-    max-height: 250px;
+    height: 260px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
   &_title {
-    font-size: 0.9em;
+    font-size: 18px;
     font-weight: 900;
-    margin: 0;
+    margin: 15px 0 10px 0;
     text-align: center;
   }
-  &_author{
+  &_author {
     font-size: 0.9em;
     font-weight: 500;
     margin: 0;
-    padding-bottom: 7px;
     text-align: center;
     color: #999;
   }
@@ -29,13 +28,13 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 100%;
+    height: 260px;
     width: 100%;
     opacity: 0;
-    transition: .3s ease;
-    background-color: rgba(0,0,0,.16);
+    transition: .4s ease;
+    background-color: rgba(0,0,0,.4);
 
-    &--icon{
+    &--icon {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -53,7 +52,7 @@
     }
   }
 
-  &:hover &_edit{
+  &:hover &_edit {
     opacity: 1;
   }
 }
